Refactor Lesson3. Add Sort tester

--- a/Lesson3/Lesson3/Lesson3.vcxproj
+++ b/Lesson3/Lesson3/Lesson3.vcxproj
@@ -127,7 +127,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicMemory.h" />
-    <ClInclude Include="Sort.h" />
+    <ClInclude Include="Sorts\BubbleSort.h" />
+    <ClInclude Include="Sorts\SelectionSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
