--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,48 @@ Lesson2/Lesson2Test/x64/
 Lesson2/packages/
 Lesson2/x64/
 Lesson2/Debug
+Lesson3/.vs/Lesson3/v15/
+
+*.log
+
+Lesson3/Lesson3/x64/Debug/Lesson3.tlog/
+
+Lesson3/Lesson3/x64/Debug/
+
+Lesson3/Lesson3Tests/x64/Debug/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.lib
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.pdb
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.lib
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.pdb
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/license (MIT).txt
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0.nupkg
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/ThirdPartyNotices.txt
+
+Lesson3/x64/Debug/gtest_main.pdb
+
+Lesson3/x64/Debug/gtest.pdb
+
+Lesson3/x64/Debug/Lesson3Tests.exe.gta.testdurations
+
+Lesson3/x64/Debug/Lesson3Tests.ilk
+
+Lesson3/x64/Debug/Lesson3Tests.pdb
+
+Lesson3/x64/Debug/
