Add homework tasks

--- a/Lesson3/Lesson3Tests/Lesson3Tests.vcxproj
+++ b/Lesson3/Lesson3Tests/Lesson3Tests.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{f7a4442a-4340-4427-b2be-4e46dafca2bc}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -34,6 +34,7 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClInclude Include="..\..\Shared\TestHelper.h" />
+    <ClInclude Include="MaxMinInArray.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SortsTests.h" />
   </ItemGroup>
