--- a/Lesson3/Lesson3/Lesson3.vcxproj
+++ b/Lesson3/Lesson3/Lesson3.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{82362EDB-029B-4D93-AA14-E9FA5A350080}</ProjectGuid>
     <RootNamespace>Lesson3</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicMemory.h" />
+    <ClInclude Include="Sorts\Arrays.h" />
     <ClInclude Include="Sorts\BubbleSort.h" />
     <ClInclude Include="Sorts\SelectionSort.h" />
   </ItemGroup>
