--- a/Lesson3/Lesson3/Lesson3.vcxproj.filters
+++ b/Lesson3/Lesson3/Lesson3.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Sorts\BubbleSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sorts\Arrays.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
