Update Lesson3 and Result Bubbel sort

--- a/Lesson3/Lesson3/Lesson3.vcxproj.filters
+++ b/Lesson3/Lesson3/Lesson3.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Sorts\Arrays.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sorts\ArrarysTask2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
