--- a/Lesson3/Lesson3/Lesson3.vcxproj
+++ b/Lesson3/Lesson3/Lesson3.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicMemory.h" />
+    <ClInclude Include="Sorts\ArrarysTask2.h" />
     <ClInclude Include="Sorts\Arrays.h" />
     <ClInclude Include="Sorts\BubbleSort.h" />
     <ClInclude Include="Sorts\SelectionSort.h" />
