--- a/Lesson4/Lesson4/Lesson4.vcxproj
+++ b/Lesson4/Lesson4/Lesson4.vcxproj
@@ -126,6 +126,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Data.h" />
+    <ClInclude Include="FromLesson.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
