Update after code review

--- a/Lesson4/Lesson4/Lesson4.vcxproj.filters
+++ b/Lesson4/Lesson4/Lesson4.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Data.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
