--- a/Lesson4/Lesson4/Lesson4.vcxproj
+++ b/Lesson4/Lesson4/Lesson4.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Data.h" />
     <ClInclude Include="FromLesson.h" />
+    <ClInclude Include="String.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
