--- a/Additional/Additional/Additional.vcxproj
+++ b/Additional/Additional/Additional.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tasks.h" />
+    <ClInclude Include="Tasks_1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
