--- a/Lesson4/Lesson4/Lesson4.vcxproj.filters
+++ b/Lesson4/Lesson4/Lesson4.vcxproj.filters
@@ -23,7 +23,10 @@
     <ClInclude Include="FromLesson.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Data.h">
+    <ClInclude Include="TimeSegment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
