--- a/Lesson3/Lesson3/Lesson3.vcxproj.filters
+++ b/Lesson3/Lesson3/Lesson3.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Sorts\ArrarysTask2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sorts\ArrayTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
