--- a/Lesson4/Lesson4/Lesson4.vcxproj
+++ b/Lesson4/Lesson4/Lesson4.vcxproj
@@ -127,8 +127,9 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Data.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="FromLesson.h" />
+    <ClInclude Include="TimeSegment.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
