Add ignore and Test for dynamic array

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,59 @@ Lesson3/x64/Debug/Lesson3Tests.ilk
 Lesson3/x64/Debug/Lesson3Tests.pdb
 
 Lesson3/x64/Debug/
+
+Additional/.vs/Additional/v15/.suo
+
+Additional/.vs/Additional/v15/Browse.VC.db
+
+Lesson3/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/
+
+Lesson4/.vs/Lesson4/v15/
+
+Lesson4/Lesson4/x64/Debug/Lesson4.tlog/
+
+Lesson4/Lesson4Tests/x64/Debug/
+
+Lesson4/Lesson4/x64/Debug/
+
+Lesson4/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/
+
+Lesson4/x64/Debug/
+
+Lesson5/.vs/Lesson5/v15/
+
+Lesson5/Lesson5/x64/Debug/Lesson5.tlog/
+
+Lesson5/Lesson5Tests/x64/Debug/Lesson5Tests.tlog/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/
+
+Lesson5/Lesson5/x64/Debug/
+
+Lesson5/Lesson5Tests/x64/Debug/Lesson5Tests.vcxproj.CopyComplete
+
+Lesson5/Lesson5Tests/x64/Debug/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.lib
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.pdb
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.lib
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.pdb
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/license (MIT).txt
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0.nupkg
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/ThirdPartyNotices.txt
+
+Lesson5/x64/Debug/
