--- a/Lesson5/Lesson5/Lesson5.vcxproj
+++ b/Lesson5/Lesson5/Lesson5.vcxproj
@@ -128,6 +128,9 @@
   <ItemGroup>
     <ClInclude Include="Array.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Tasks.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
