--- a/Lesson5/Lesson5/Lesson5.vcxproj.filters
+++ b/Lesson5/Lesson5/Lesson5.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Tasks.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
