--- a/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
+++ b/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="TestArray.h" />
+    <ClInclude Include="TestDynamicArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp" />
