Meger from master

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,13 @@ Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.
 Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/ThirdPartyNotices.txt
 
 Lesson5/x64/Debug/
+
+Lesson3/Debug/
+
+Lesson3/Lesson3/Debug/Lesson3.tlog/
+
+Lesson3/Lesson3/Debug/
+
+Lesson3/Lesson3Tests/Debug/Lesson3Tests.tlog/
+
+Lesson3/Lesson3Tests/Debug/
