Solve array tasks

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ Lesson3/Lesson3/Debug/
 Lesson3/Lesson3Tests/Debug/Lesson3Tests.tlog/
 
 Lesson3/Lesson3Tests/Debug/
+
+Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/
+
+Lessons1/.vs/Lessons1/v15/
