Adding new task in lesson5

--- a/Lesson5/Lesson5/Lesson5.vcxproj
+++ b/Lesson5/Lesson5/Lesson5.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="List.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Tasks.txt" />
