--- a/Lesson5/Lesson5/Lesson5.vcxproj.filters
+++ b/Lesson5/Lesson5/Lesson5.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="Array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Tasks.txt">
