Adding Result  Task1_4 from additional

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,41 @@ Lesson3/Lesson3Tests/Debug/
 Lesson5/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/
 
 Lessons1/.vs/Lessons1/v15/
+
+*.db
+
+*.tlog
+
+*.obj
+
+Additional/Additional/x64/Debug/vc141.idb
+
+Additional/Additional/x64/Debug/vc141.pdb
+
+Additional/AdditionalTests/x64/Debug/AdditionalTests.vcxproj.CopyComplete
+
+Additional/AdditionalTests/x64/Debug/vc141.idb
+
+Additional/AdditionalTests/x64/Debug/vc141.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/.signature.p7s
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest_pred_impl.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-death-test.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-message.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-param-test.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-param-test.h.pump
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-printers.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-spi.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-test-part.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-typed-test.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest.h
