Adding result tasks for dynamicarray

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,99 @@ Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1
 Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest-typed-test.h
 
 Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/gtest_prod.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/custom/gtest-port.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/custom/gtest-printers.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/custom/gtest.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-death-test-internal.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-filepath.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-internal.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-linked_ptr.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-param-util-generated.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-param-util-generated.h.pump
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-param-util.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-port-arch.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-port.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-string.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-tuple.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-tuple.h.pump
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-type-util.h
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/include/gtest/internal/gtest-type-util.h.pump
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.propertiesui.xml
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/build/native/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/gtest_main.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/gtest_main.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/gtest.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Debug/gtest.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/gtest_main.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/gtest_main.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/gtest.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x64/Release/gtest.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/gtest_main.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/gtest_main.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/gtest.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Debug/gtest.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest_main.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.lib
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/lib/native/v140/windesktop/msvcstl/static/rt-dyn/x86/Release/gtest.pdb
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/license (MIT).txt
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0.nupkg
+
+Additional/packages/Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.0/ThirdPartyNotices.txt
+
+Additional/x64/Debug/Additional.exe
+
+Additional/x64/Debug/Additional.ilk
+
+Additional/x64/Debug/Additional.pdb
+
+Additional/x64/Debug/AdditionalTests.exe
+
+Additional/x64/Debug/AdditionalTests.exe.gta.testdurations
+
+Additional/x64/Debug/AdditionalTests.ilk
+
+Additional/x64/Debug/AdditionalTests.pdb
+
+Additional/x64/Debug/gtest_main.pdb
+
+Additional/x64/Debug/gtest.pdb
