--- a/Lesson5/Lesson5/Lesson5.vcxproj.filters
+++ b/Lesson5/Lesson5/Lesson5.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DynamicArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Tasks.txt">
