--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,9 @@ Additional/x64/Debug/AdditionalTests.pdb
 Additional/x64/Debug/gtest_main.pdb
 
 Additional/x64/Debug/gtest.pdb
+
+Additional/.vs/Additional/v15/Browse.VC.opendb
+
+Additional/.vs/Additional/v15/Solution.VC.db-shm
+
+Additional/.vs/Additional/v15/Solution.VC.db-wal
