--- a/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
+++ b/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="TestArray.h" />
     <ClInclude Include="TestDynamicArray.h" />
+    <ClInclude Include="TestSortedContainer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp" />
