--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,15 @@ Additional/.vs/Additional/v15/Browse.VC.opendb
 Additional/.vs/Additional/v15/Solution.VC.db-shm
 
 Additional/.vs/Additional/v15/Solution.VC.db-wal
+
+Lesson6/.vs/Lesson6/v15/
+
+Lesson6/Debug/Lesson6.exe
+
+Lesson6/Debug/Lesson6.ilk
+
+Lesson6/Debug/Lesson6.pdb
+
+Lesson6/Lesson6/Debug/vc141.idb
+
+Lesson6/Lesson6/Debug/vc141.pdb
