--- a/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
+++ b/Lesson5/Lesson5Tests/Lesson5Tests.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -36,7 +36,6 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="TestArray.h" />
     <ClInclude Include="TestDynamicArray.h" />
-    <ClInclude Include="TestSortedContainer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp" />
