Update lesson5 and add gitignore lesson 7

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,9 @@ Lesson6/Debug/Lesson6.pdb
 Lesson6/Lesson6/Debug/vc141.idb
 
 Lesson6/Lesson6/Debug/vc141.pdb
+
+Lesson7/Lesson7/Debug/
+
+Lesson7/Debug/
+
+Lesson7/.vs/Lesson7/v15/
