--- a/Lesson5/Lesson5/Lesson5.vcxproj.filters
+++ b/Lesson5/Lesson5/Lesson5.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClInclude Include="SortedContainerBench.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SortedArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Tasks.txt">
