--- a/Lesson7/Lesson7/Lesson7.vcxproj.filters
+++ b/Lesson7/Lesson7/Lesson7.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Lesson.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Templates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
