Auto stash before merge of "master" and "origin/master"

--- a/Lesson7/Lesson7/Lesson7.vcxproj
+++ b/Lesson7/Lesson7/Lesson7.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Inheritance.h" />
     <ClInclude Include="Lesson.h" />
     <ClInclude Include="Templates.h" />
   </ItemGroup>
