--- a/Lesson7/Lesson7/Lesson7.vcxproj.filters
+++ b/Lesson7/Lesson7/Lesson7.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="Lesson.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Inheritance.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Templates.h">
       <Filter>Header Files</Filter>
     </ClInclude>
