--- a/Lesson6/Lesson6/Lesson6.vcxproj
+++ b/Lesson6/Lesson6/Lesson6.vcxproj
@@ -125,6 +125,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Parallel.h" />
+    <ClInclude Include="testVector.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
