Udate lesson6 and 7

--- a/Lesson7/Lesson7/Lesson7.vcxproj
+++ b/Lesson7/Lesson7/Lesson7.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Questions.h" />
     <ClInclude Include="Inheritance.h" />
     <ClInclude Include="Lesson.h" />
     <ClInclude Include="Templates.h" />
