--- a/.gitignore
+++ b/.gitignore
@@ -1002,3 +1002,11 @@ Lessons1/.vs/Lessons1/v15/ipch/AutoPCH/8abe934821858b74/SOURCE.ipch
 Lessons1/.vs/Lessons1/v15/Solution.VC.db
 
 Lessons1/.vs/Lessons1/v15/.suo
+
+Lesson6/.vs/Lesson6/v15/Browse.VC.opendb
+
+Lesson6/Lesson6/Debug/Lesson6.Build.CppClean.log
+
+Lesson6/Lesson6/Debug/Lesson6.tlog/unsuccessfulbuild
+
+Lesson7/.vs/Lesson7/v15/Browse.VC.opendb
