--- a/.gitignore
+++ b/.gitignore
@@ -1010,3 +1010,5 @@ Lesson6/Lesson6/Debug/Lesson6.Build.CppClean.log
 Lesson6/Lesson6/Debug/Lesson6.tlog/unsuccessfulbuild
 
 Lesson7/.vs/Lesson7/v15/Browse.VC.opendb
+
+Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/3c07045cab63e34c/
