--- a/.gitignore
+++ b/.gitignore
@@ -1012,3 +1012,49 @@ Lesson6/Lesson6/Debug/Lesson6.tlog/unsuccessfulbuild
 Lesson7/.vs/Lesson7/v15/Browse.VC.opendb
 
 Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/3c07045cab63e34c/
+
+Lesson8/.vs/Lesson8/v15/.suo
+
+Lesson8/.vs/Lesson8/v15/Browse.VC.db
+
+Lesson8/.vs/Lesson8/v15/ipch/AutoPCH/6d0b76ebcb284fcf/HASHTABLE.ipch
+
+Lesson8/.vs/Lesson8/v15/ipch/AutoPCH/7d11dc587894106a/SMARTPOINTERS.ipch
+
+Lesson8/.vs/Lesson8/v15/ipch/AutoPCH/ada1e1d835295955/SOURCE.ipch
+
+Lesson8/.vs/Lesson8/v15/ipch/AutoPCH/fa65de27454483ea/SORTS.ipch
+
+Lesson8/Debug/Lesson8.exe
+
+Lesson8/Debug/Lesson8.ilk
+
+Lesson8/Debug/Lesson8.pdb
+
+Lesson8/Lesson8.sln
+
+Lesson8/Lesson8/Debug/Lesson8.log
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/CL.command.1.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/CL.read.1.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/CL.write.1.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/Lesson8.lastbuildstate
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/Lesson8.write.1u.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/link.command.1.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/link.read.1.tlog
+
+Lesson8/Lesson8/Debug/Lesson8.tlog/link.write.1.tlog
+
+Lesson8/Lesson8/Debug/Source.obj
+
+Lesson8/Lesson8/Debug/vc141.idb
+
+Lesson8/Lesson8/Debug/vc141.pdb
+
+Lesson8/Lesson8/Debug/vcpkg.applocal.log
