--- a/.gitignore
+++ b/.gitignore
@@ -1058,3 +1058,5 @@ Lesson8/Lesson8/Debug/vc141.idb
 Lesson8/Lesson8/Debug/vc141.pdb
 
 Lesson8/Lesson8/Debug/vcpkg.applocal.log
+
+Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/11e8a8d885926bb0/GAMEPLAY.ipch
