--- a/.gitignore
+++ b/.gitignore
@@ -1060,3 +1060,7 @@ Lesson8/Lesson8/Debug/vc141.pdb
 Lesson8/Lesson8/Debug/vcpkg.applocal.log
 
 Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/11e8a8d885926bb0/GAMEPLAY.ipch
+
+Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/811323a230217a5/
+
+Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/eed09ef2e28dfd2a/
