--- a/Lesson6/Lesson6/Lesson6.vcxproj
+++ b/Lesson6/Lesson6/Lesson6.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="circlebuffrer.h" />
     <ClInclude Include="ConsoleHelper.h" />
     <ClInclude Include="GamePlay.h" />
     <ClInclude Include="ObjectsGamePlay.h" />
