--- a/.gitignore
+++ b/.gitignore
@@ -1064,3 +1064,7 @@ Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/11e8a8d885926bb0/GAMEPLAY.ipch
 Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/811323a230217a5/
 
 Lesson6/.vs/Lesson6/v15/ipch/AutoPCH/eed09ef2e28dfd2a/
+
+Lesson8/.vs/Lesson8/v15/
+
+Lesson8/Lesson8/Debug/
