--- a/Lesson8/Lesson8/Lesson8.vcxproj.filters
+++ b/Lesson8/Lesson8/Lesson8.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Sorts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Graph\Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
